[gd_scene load_steps=19 format=2]

[ext_resource path="res://coutTheDown.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://cell_3.gd" type="Script" id=3]
[ext_resource path="res://background.tres" type="Theme" id=4]
[ext_resource path="res://cell_1.gd" type="Script" id=5]
[ext_resource path="res://cell_2.gd" type="Script" id=6]
[ext_resource path="res://cell_8.gd" type="Script" id=7]
[ext_resource path="res://cell_4.gd" type="Script" id=8]
[ext_resource path="res://cell_6.gd" type="Script" id=9]
[ext_resource path="res://cell_7.gd" type="Script" id=10]
[ext_resource path="res://cell_5.gd" type="Script" id=11]
[ext_resource path="res://cell_9.gd" type="Script" id=12]
[ext_resource path="res://timer_script.gd" type="Script" id=13]
[ext_resource path="res://lmroman5-regular.otf" type="DynamicFontData" id=14]
[ext_resource path="res://record.gd" type="Script" id=15]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_color = Color( 0.223529, 1, 0, 1 )
font_data = ExtResource( 14 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -774.0
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 601.0 ]
}

[node name="background" type="Panel" parent="."]
margin_right = 250.0
margin_bottom = 600.0
theme = ExtResource( 4 )

[node name="cell_container" type="GridContainer" parent="."]
margin_right = 250.0
margin_bottom = 400.0
columns = 3

[node name="cell_1" type="Label" parent="cell_container"]
margin_right = 81.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 1"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="cell_2" type="Label" parent="cell_container"]
margin_left = 85.0
margin_right = 166.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 2"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="cell_3" type="Label" parent="cell_container"]
margin_left = 170.0
margin_right = 250.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 3"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="cell_4" type="Label" parent="cell_container"]
margin_top = 135.0
margin_right = 81.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 4"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="cell_5" type="Label" parent="cell_container"]
margin_left = 85.0
margin_top = 135.0
margin_right = 166.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 5"
align = 1
valign = 1
script = ExtResource( 11 )

[node name="cell_6" type="Label" parent="cell_container"]
margin_left = 170.0
margin_top = 135.0
margin_right = 250.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 6"
align = 1
valign = 1
script = ExtResource( 9 )

[node name="cell_7" type="Label" parent="cell_container"]
margin_top = 270.0
margin_right = 81.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 7"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="cell_8" type="Label" parent="cell_container"]
margin_left = 85.0
margin_top = 270.0
margin_right = 166.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 8"
align = 1
valign = 1
script = ExtResource( 7 )

[node name="cell_9" type="Label" parent="cell_container"]
margin_left = 170.0
margin_top = 270.0
margin_right = 250.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cell 9"
align = 1
valign = 1
script = ExtResource( 12 )

[node name="controll_container" type="HBoxContainer" parent="."]
margin_top = 400.0
margin_right = 250.0
margin_bottom = 600.0

[node name="count_up_label" type="Label" parent="."]
margin_left = 125.0
margin_top = 400.0
margin_right = 250.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="count_up_label"]
script = ExtResource( 13 )

[node name="record" type="Label" parent="."]
margin_top = 400.0
margin_right = 125.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
script = ExtResource( 15 )

[connection signal="start_again" from="." to="count_up_label/Timer" method="_on_UI_start_again"]
[connection signal="stopp_countup" from="." to="count_up_label/Timer" method="_on_UI_stopp_countup"]
[connection signal="to_cell_1" from="." to="cell_container/cell_1" method="_on_UI_to_cell_1"]
[connection signal="to_cell_2" from="." to="cell_container/cell_2" method="_on_UI_to_cell_2"]
[connection signal="to_cell_3" from="." to="cell_container/cell_3" method="_on_UI_to_cell_3"]
[connection signal="to_cell_4" from="." to="cell_container/cell_4" method="_on_UI_to_cell_4"]
[connection signal="to_cell_5" from="." to="cell_container/cell_5" method="_on_UI_to_cell_5"]
[connection signal="to_cell_6" from="." to="cell_container/cell_6" method="_on_UI_to_cell_6"]
[connection signal="to_cell_7" from="." to="cell_container/cell_7" method="_on_UI_to_cell_7"]
[connection signal="to_cell_8" from="." to="cell_container/cell_8" method="_on_UI_to_cell_8"]
[connection signal="to_cell_9" from="." to="cell_container/cell_9" method="_on_UI_to_cell_9"]
[connection signal="weitergabe_signal" from="." to="count_up_label/Timer" method="_on_UI_weitergabe_signal"]
[connection signal="all_the_time" from="count_up_label/Timer" to="record" method="_on_Timer_all_the_time"]
